crates/carta/tests/snapshots/golden_e2e__mediawiki__native__definition-lists.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ DefinitionList
    [ ( [ Str "Term" ] , [ [ Plain [ Str "Definition" ] ] ] )
    , ( [ Str "Apple" ]
      , [ [ Plain [ Str "A" , Space , Str "fruit" ] ] ]
      )
    ]
]
