crates/carta/tests/snapshots/golden_e2e__mediawiki__native__definition-multi.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ DefinitionList
    [ ( [ Str "Fruit" ]
      , [ [ Plain [ Str "Apple" ] ] , [ Plain [ Str "Banana" ] ] ]
      )
    , ( [ Str "Vegetable" ] , [ [ Plain [ Str "Carrot" ] ] ] )
    ]
]
