crates/carta/tests/snapshots/golden_e2e__mediawiki__native__definition-term-url.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ DefinitionList
    [ ( [ Link
            ( "" , [] , [] )
            [ Str "http://example.com" ]
            ( "http://example.com" , "" )
        ]
      , [ [ Plain [ Str "a" , Space , Str "definition" ] ] ]
      )
    ]
]
