crates/carta/tests/snapshots/golden_e2e__mediawiki__native__external-link-bare-bracket.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "Unclosed"
    , Space
    , Str "["
    , Link
        ( "" , [] , [] )
        [ Str "http://example.com" ]
        ( "http://example.com" , "" )
    , Space
    , Str "here."
    ]
]
