crates/carta/tests/snapshots/golden_e2e__mediawiki__native__external-link-empty-label.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "["
    , Link
        ( "" , [] , [] )
        [ Str "http://example.com]x" ]
        ( "http://example.com%5Dx" , "" )
    ]
]
