crates/carta/tests/snapshots/golden_e2e__mediawiki__native__heading-id-slug.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Header
    2
    ( "a_b_c.d" , [] , [] )
    [ Str "A," , Space , Str "B-C.D!" ]
]
