crates/carta/tests/snapshots/golden_e2e__mediawiki__native__heading-multiline.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Header
    2 ( "a_b" , [] , [] ) [ Str "a" , SoftBreak , Str "b" ]
]
